# portable-document-formatter

./: .eslintrc.json  .gitignore  ARCHITECTURE.md  BUG_FIXES_SUMMARY.md  CLAUDE.md  DOCUMENTATION.md  DOCUMENT_PROCESSOR_README.md  FINAL_FIXES_SUMMARY.md  FIXES_APPLIED.md  KNOWLEDGE_GRAPH.md  KNOWLEDGE_GRAPH_README.md  LATEST_FIXES.md  MARKITDOWN_INTEGRATION.md  PDF_VIEWER_FIX.md  PHASE1_KICKOFF.md  PRD_PHASE_1.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README.old.md  ROADMAP.md  SAVE_FEATURE_FIX.md  SETUP.md  TROUBLESHOOTING.md  UI_IMPROVEMENTS.md  UI_IMPROVEMENTS_SUMMARY.md  knowledge-graph-visualization.html  knowledge-graph.json  package-lock.json  package.json  playwright.config.ts  restart-app.sh  tailwind.config.js  tsconfig.json  tsconfig.main.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-installers.yml
backend/: markitdown_service.py
docs/: CACHE_SERVICE.md
scripts/: embeddings-spike.mjs  llm-spike.mjs  ocr-spike.mjs
services/markitdown-api/: README.md  pyproject.toml
services/markitdown-api/src/markitdown_api/: app.py  converter.py  main.py  models.py
services/markitdown-api/tests/: test_app.py
src/e2e/: pdf-viewer.spec.ts
src/main/: main.ts  preload.ts
src/main/services/: companion-config.ts  file-service.ts  (+7 more)
src/renderer/: App.tsx  index.html  main.tsx
src/services/: README.md  annotation-service.ts  cache-db.ts  cache-integration-example.ts  cache-service.ts  hash-utils.ts  ocr-service.ts  pdf-renderer.ts
src/tests/: document-processor.test.ts  markitdown-service.test.ts  setup.ts
src/workers/: ocr-worker.ts
(+86 files in other folders)
