[project]
name = "markitdown-fastapi-service"
version = "0.1.0"
description = "FastAPI microservice for converting uploaded documents to Markdown with MarkItDown."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "markitdown[pdf]>=0.1.5",
    "python-multipart>=0.0.9,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/markitdown_api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
